# language-precision

./: README.md  index.html  package.json  pyproject.toml  script.js
backend-snapshot/: server.js
data/: stats.json
examples/: before_after.md
public/: index.html  script.js  styles.css
src/language_precision/: __init__.py  analyzer.py  cli.py  generator.py  models.py  refiner.py  self_improve.py  web.py
