[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-precision"
version = "0.1.0"
description = "Tools for analyzing, refining, and generating precise language."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "textstat>=0.7.4",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
]

[project.scripts]
language-precision = "language_precision.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
